Update routes, view, controller, and models

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,18 +13,18 @@
   <div class="container">
     <form action="/action_page.php">
       <div class="row">
-        <h2 style="text-align:center">Login with Social Media</h2>
+        <h2 style="text-align:center">Login or sighnup with Social Media</h2>
 
 
         <div class="col">
-          <a href="/users/auth/facebook" class="fb btn">
-            <i class="fa fa-facebook fa-fw"></i> Login with Facebook
+          <a href="/users/auth/facebook" class="fb btn" method="get">
+            <i class="fa fa-facebook fa-fw"></i> Login or sighnup with Facebook
           </a>
-          <a href="#" class="twitter btn">
-            <i class="fa fa-twitter fa-fw"></i> Login with Twitter
+          <a href="p" class="twitter btn">
+            <i class="fa fa-twitter fa-fw"></i> Login or sighnup with Twitter
           </a>
-          <a href="#" class="google btn">
-            <i class="fa fa-google fa-fw"></i> Login with Google+
+          <a href="/auth/google" class="google btn">
+            <i class="fa fa-google fa-fw"></i> Login or sighnup with Google+
           </a>
         </div>
 
@@ -55,3 +55,6 @@
 </body>
 
 </html>
+
+
+
