update the cloudinary

--- a/views/registration.ejs
+++ b/views/registration.ejs
@@ -19,27 +19,28 @@
             <p>Runner Information</p>
             <div class="item">
                 <label for="name">Name<span>*</span></label>
-                <input id="name" type="name" name="name" required />
+                <input type="text" class="form-control p-4" id="name" name="name" placeholder="Name of vehicle" required="required" />
             </div>
             <div class="item">
                 <label for="manufacturer">manufacturer<span>*</span></label>
-                <input id="manufacturer" type="manufacturer" name="manufacturer" required />
+                <input type="text" class="form-control p-4" id="manufacturer" name="manufacturer" placeholder="Name of manufacturer" required="required" />
             </div>
             <div class="item">
                 <label for="year">Year of manufacture<span>*</span></label>
-                <input id="year" type="year" name="year" required />
+                <input type="text" class="form-control p-4" id="year" name="year" placeholder="Year of manufactured" required="required" />
             </div>
             <div class="item">
-                <label for="files">Images<span>*</span></label>
-                <input id="files" type="files" name="files" required />
+                <label for="file">Images<span>*</span></label>
+                <input type="file" class="form-control p-4" id="file" name="file" placeholder="Upload the images" required="required" />
+            
             </div>
             <div class="item">
-                <label for="number_of_days">Number of days<span>*</span></label>
-                <input id="number_of_days" type="number_of_days" name="number_of_days" required />
+                <label for="number_of_day">Number of days<span>*</span></label>
+                <input type="text" class="form-control p-4" id="number_of_days" name="number_of_days" placeholder="Enter the number of day" required="required" />
             </div>
             <div class="item">
                 <label for="amount">Amount<span>*</span></label>
-                <input id="amount" type="text" name="amount" required />
+                <input type="text" class="form-control p-4" id="amount" name="amount" placeholder="Enter the Amount" required="required" />
             </div>
             <div class="btn-block">
                 <button type="submit" href="/">SUBMIT</button>
